# R2R_Store

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  relatorio_texturas_tienda.txt
docs/: ESCENA.md  MANUAL_TECNICO.md  MANUAL_USUARIO.md
models/: REF_Basura.mtl  REF_Cafetera1_Body.mtl  REF_Cafetera1_Boquilla_1.mtl  REF_Cafetera2_Body.mtl  REF_Cafetera2_Boquilla_1.mtl  REF_Caja1_Body.mtl  REF_Caja2_Body.mtl  REF_Camara_Head.mtl  REF_Camara_Soporte.mtl  REF_Cartel_Wanted.mtl  REF_Estante_1.mtl  REF_Estante_2.mtl  REF_Estructura_tienda_completa_R2R.mtl  REF_Folleto_R2R_1.mtl  REF_Folleto_R2R_2.mtl  REF_Folleto_R2R_3.mtl  REF_Folleto_R2R_8.mtl  REF_Folleto_R2R_9.mtl  REF_Helados1_Body.mtl  REF_Helados1_Tapa.mtl  REF_Helados2_Body.mtl  REF_Helados2_Tapa.mtl  REF_Hielo_Body.mtl  REF_Hielo_Bolsa.mtl  REF_Lampara_2.mtl  REF_Logo_Tienda_Entrada_Principal.mtl  REF_Logo_poste_R2R.mtl  REF_Mostrador.mtl  REF_Mueble_Cafetera1.mtl  REF_Mueble_Cafetera2.mtl  REF_Paletas_1.mtl  REF_Paletas_2.mtl  REF_Pared_Refrigeradores.mtl  REF_Pared_Trasera.mtl  REF_Piso_completo_R2R.mtl  REF_Poste_R2R.mtl  REF_Puerta_princ_Izq.mtl  REF_Rack_Bebidas.mtl  REF_Rack_Cigarros.mtl  REF_Rack_Rack_Refri_4.mtl  (+8 more)
shaders/: lighting.frag  lighting.vert
src/: Camera.h  Mesh.h  Model.h  ProceduralMesh.h  Shader.h  TextureManager.h  TextureReport.h  main.cpp
